tests/machine/x/c/for_map_collection.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/for_map_collection.c: In function ‘main’:
/workspace/mochi/tests/machine/x/c/for_map_collection.c:39:30: error: ‘MItem’ has no member named ‘len’
   39 |   for (int tmp1 = 0; tmp1 < m.len; tmp1++) {
      |                              ^
/workspace/mochi/tests/machine/x/c/for_map_collection.c:40:14: error: ‘MItem’ has no member named ‘data’
   40 |     int k = m.data[tmp1];
      |              ^

   1: #include <stdio.h>
